List of the WorkingCopy is displayed
Working copy double-click opens root folder in Windows Explorer

--- a/SvnWorkingCopyMigrationTool/MainWindow.xaml
+++ b/SvnWorkingCopyMigrationTool/MainWindow.xaml
@@ -1,11 +1,9 @@
 ﻿<Window x:Class="SvnWorkingCopyMigrationTool.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="600" Width="600">
+        Title="MainWindow" Height="800" Width="1200">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
@@ -18,39 +16,20 @@
             </StackPanel>
             <Button Content="Browse automatically" Click="ButtonBase_OnClick" Width="150" HorizontalAlignment="Left"></Button>
         </StackPanel>
-
-        <Label Grid.Row="1" Margin="0 20 0 0" Content="Working Copy" FontWeight="Bold" FontSize="18"/>
-
-        <Grid Grid.Row="2" Margin="20 0 0 0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
+        
+        <Grid Grid.Row="1">
             <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             
-            <Label Grid.Row="0" Grid.Column="0" Content="Root Path:" HorizontalAlignment="Right"/>
-            <Label Grid.Row="1" Grid.Column="0" Content="URL:" HorizontalAlignment="Right"/>
-            <Label Grid.Row="2" Grid.Column="0" Content="Repository Root:" HorizontalAlignment="Right"/>
-            <Label Grid.Row="3" Grid.Column="0" Content="Revision:" HorizontalAlignment="Right"/>
-            <Label Grid.Row="4" Grid.Column="0" Content="Migration Required:" HorizontalAlignment="Right"/>
-
-            <Label Grid.Row="0" Grid.Column="1" Content="{Binding SelectedWorkingCopy.RootPath}"/>
-            <Label Grid.Row="1" Grid.Column="1" Content="{Binding SelectedWorkingCopy.URL}"/>
-            <Label Grid.Row="2" Grid.Column="1" Content="{Binding SelectedWorkingCopy.RepositoryRoot}"/>
-            <Label Grid.Row="3" Grid.Column="1" Content="{Binding SelectedWorkingCopy.Revision}"/>
-            <Label Grid.Row="4" Grid.Column="1" Content="{Binding SelectedWorkingCopy.MigrationRequired}"/>
-            <Button Grid.Row="5" Grid.Column="1" Content="Migrate" HorizontalAlignment="Left" Click="Button_Click_Migrate"/>
-        </Grid>
-        
-        <Grid Grid.Row="3">
-            
+            <Label Grid.Row="0" Content="Working Copies"></Label>
+            <DataGrid 
+                Grid.Row="1" 
+                ItemsSource="{Binding WorkingCopies}" 
+                SelectionMode="Single" SelectedItem="{Binding SelectedWorkingCopyViewModel,Mode=TwoWay}" 
+                MouseDoubleClick="Control_OnMouseDoubleClick">
+            </DataGrid>
         </Grid>
     </Grid>
 </Window>
